--- a/public/navigation_css/wheyshop_tracking.css
+++ b/public/navigation_css/wheyshop_tracking.css
@@ -1374,3 +1374,180 @@ body {
 .brand-name{
     font-weight: 600;
 }
+
+
+
+@media only screen and (max-width: 1024px) {
+    .header-wrapper {
+        margin: unset;
+        max-width: 100%;
+        width: 100%;
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 0 16px;
+        gap: 10px;
+    }
+
+    .header-logo {
+        height: 21px;
+        flex-direction: row;
+        gap: 10px;
+    }
+
+    .logo-img {
+        height: 100%;
+    }
+
+    .logo-img img {
+        height: 100%;
+    }
+
+    .header-content {
+        margin: 0;
+        width: 100%;
+    }
+
+    .search-button {
+        display: none;
+    }
+
+    .address.two {
+        height: fit-content;
+        width: 100%;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        background-color: #fff;
+        margin: 0;
+        padding: 16px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+        border-radius: 10px;
+    }
+
+    .address-two-wrapper {
+        height: 100%;
+        width: fit-content;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+    }
+
+    .header-bot
+    {
+        display: none;
+    }
+
+    .header-options{
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .header-top{
+        display: flex;
+        flex-direction: column-reverse;
+        height: fit-content;
+    }
+    .header{
+        height: fit-content;
+    }
+
+    .main-content {
+        padding: 0 10px;
+    }
+
+    .main-content-wrapper {
+        width: 100%;
+    }
+
+    .list-item {
+        flex-wrap: wrap;
+        gap: 15px;
+    }
+
+    .item {
+        width: calc((100% / 3) - 15px);
+        height: 505px;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .slider-item {
+        width: 100%;
+    }
+
+    .slider-item:last-child {
+        display: none;
+    }
+
+    .address-wrapper {
+        width: 100%;
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-line-clamp: 1;
+        -webkit-box-orient: vertical;
+        text-overflow: ellipsis;
+    }
+
+    .list-products {
+        height: fit-content;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        gap: 16px;
+    }
+
+    .product {
+        height: 150px;
+        width: calc((100% / 2) - 8px);
+    }
+
+    .product-title {
+        padding: 16px 16px 0 16px;
+    }
+
+    .product-name span {
+        font-size: 16px;
+    }
+
+    .list-item {
+        flex-wrap: wrap;
+        gap: 16px;
+    }
+
+    .item {
+        width: calc((100% / 2) - 8px);
+        height: 487px;
+    }
+
+    .item-information-wrapper {
+        gap: 12px;
+    }
+
+    .brand-ship {
+        padding: 0 10px 5px 10px;
+    }
+
+
+    .main-product-wrapper {
+        flex-direction: column;
+    }
+
+    .colum-one,
+    .colum-two {
+        width: 100%;
+    }
+
+    .path-bar-wrapper a {
+        font-size: 12px;
+    }
+
+    .path-bar-wrapper i {
+        font-size: 10px;
+    }
+}
+
+@media only screen and (max-width: 360px) {
+    .product-name span {
+        font-size: 12px;
+    }
+}
