--- a/public/navigation_css/card.css
+++ b/public/navigation_css/card.css
@@ -22,30 +22,59 @@ i.fa-solid.fa-caret-up{
   justify-content: center;
   align-items: center;
   background-image: url('https://i.pinimg.com/originals/71/c6/b0/71c6b0e088a04dc7c4b2b4e34d96b5e5.jpg');
+
   height: 700px;
   width: 100%;
 }
 
 .id1 {
-  display:block ;
+  /* display:block ;
   width: 690px;
-  height: 350px;
-  background-image: linear-gradient(163deg, #1d1f1e 0%, #59585c 100%);
+  height: 350px; */
+  /* background-image: linear-gradient(163deg, #1d1f1e 0%, #59585c 100%); */
+
   border-radius: 20px;
   transition: all .3s;
  }
  
  .id2 {
-  width: 690px;
-  height: 350px;
-  background-image: url('https://zshop.vn/blogs/wp-content/uploads/2022/08/ezgif.com-gif-maker-15-1.png');
+  /* background-image: url('https://zshop.vn/blogs/wp-content/uploads/2022/08/ezgif.com-gif-maker-15-1.png'); */
+
   border-radius:20px;
   transition: all .2s;
  }
+
+ .id-card {
+  position: relative;
+}
+
+.img-card {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  opacity: 0;
+  transform: translateY(-50%);
+  transition: opacity 0.5s ease-in-out;
+  min-height: 400px;
+  min-width: 400px;
+}
+
+.show {
+  opacity: 1;
+}
+
  
  .id2:hover {
   transform: scale(0.98);
   border-radius: 20px;
+ }
+
+ .id-card .id2{
+  display: flex;
+ }
+
+ .id-card .id2 img{
+  
  }
 
  .id:hover {
@@ -94,7 +123,7 @@ i.fa-solid.fa-caret-up{
   }
   .id1, .id2 {
     width: 300px;
-    height: 125px;
+    /* height: 125px; */
   }
   .heading_logo{
     font-size: .7em;
