--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -462,6 +462,7 @@ html {
 .content-service a:hover {
     color: goldenrod !important;
 }
+/* login */
 
 .header-login {
     width: fit-content;
@@ -503,7 +504,7 @@ html {
 
 .submenu-login {
     position: absolute;
-    top: calc(100%);
+    top: calc(100% + 8px);
     right: 0;
     display: none;
     flex-direction: column;
@@ -514,20 +515,127 @@ html {
 .menu-login {
     display: flex;
     flex-direction: column;
-    background-color: white;
-    box-shadow: 0 0 10px #fff;
+    background-color: #fff;
+    border-radius: 10px;
+    border: 1px solid #99999955;
+    overflow: hidden;
 }
-
-.menu-login a {
-    padding: 10px;
-    font-size: 14px;
-    color: #000;
+.logo-web{
+    padding: 16px;
+    height: fit-content;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.logo-web img{
+    height: 22px;
+    display: none;
+}
+.logo-web-wrapper{
+    height: 21px;
+    width: fit-content;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    font-size: 22px;
     text-transform: uppercase;
+    font-weight: 700;
 }
-
-.menu-login a:hover {
+.logo-web-wrapper span{
+    margin-left: -8px;
+    font-weight: 300;
+    height: fit-content;
+}
+.logoutstatus.status.active{
+    display: flex;
+}
+.logoutstatus.status{
+    display: none;
+    border: unset;
+    background-color: unset;
+    font-size: 14px;
+    padding: 5px 8px;
+    border-radius: 8px;
+    color: #888;
+    font-weight: 500;
+    cursor: pointer;
+}
+.login-account.active{
+    display: flex;
+}
+.login-account{
+    padding: 16px;
+    height: fit-content;
+    width: 100%;
+    display: none;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 12px;
+}
+.login-account img{
+    height: 80px;
+    border-radius: 50%;
+    object-fit: cover;
+    flex-shrink: 0;
+}
+.login-account div{
+    height: 100%;
+    width: max-content;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    font-size: 16px;
+}
+.name-account-login{
+    color: #000;
+    font-size: 17px;
+    font-weight: 600;
+}
+.gmail-account-login{
+    font-weight: 500;
+    color: #222;
+}
+.login-account a{
+    font-weight: 400;
+    font-size: 14px;
+}
+.option-account-login{
+    height: fit-content;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+.option-account-login a.active{
+    display: none;
+}
+.option-account-login a{
+    padding: 16px;
+    width: 100%;
+    height: fit-content;
+    flex-shrink: 0;
+    font-size: 16px;
+    font-weight: 500;
+    color: #444;
+    border-top: 1px solid #99999933;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 10px;
+}
+.option-account-login a:hover{
     background-color: #eee;
 }
+.option-account-login img{
+    height: 30px;
+    /* text-shadow: 0 0 5px #99999955; */
+}
+
+
 
 /* ==================== MEDIA ==================== */
 @media (max-width: 1000px) {
@@ -1546,7 +1654,7 @@ body {
 }
 .item-second.active{
     /* width: calc(100% / 2); */
-    flex: 2;
+    flex: 2.5;
 }
 .item-second.active .item-second-group:nth-child(n){
     height: unset;
@@ -1817,6 +1925,100 @@ body {
     z-index: 0;
     transition: all .5s;
 }
+
+
+
+
+/* container-third */
+.container-third{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.container-third-wrapper{
+    height: fit-content;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.third-style{
+    height: fit-content;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.third-style-left{
+    height: 100%;
+    width: 50%;
+    flex-shrink: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+.third-title{
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 600;
+    color: #000;
+}
+.third-content{
+    height: 100%;
+    width: 100%;
+    font-size: 18px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 10px;
+    padding: 64px;
+    text-align: start;
+    font-weight: 400;
+}
+
+
+
+.third-style-right{
+    height: 100%;
+    width: 50%;
+    flex-shrink: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 32px;
+}
+.third-style-right img:nth-child(1){
+    display: none;
+}
+.third-style-right img{
+    width: 100%;
+    border-radius: 15px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* =============================== */
 
@@ -3047,7 +3249,7 @@ body {
         width: 140px;
     }
     .item-second-content{
-        width: 300px;
+        width: 270px;
     }
 }
 
