--- a/public/navigation_css/wheyshop.css
+++ b/public/navigation_css/wheyshop.css
@@ -713,7 +713,28 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* gap: 10px; */
+    /* overflow: hidden; */
+}
+
+.slider-banner{
+    width: 100%;
+    height: 100%;
+    /* flex-shrink: 0; */
+    /* max-height: 450px; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    transition: transform 1s ease;
+}
+.slider-banner img{
+    height: 100%;
+    max-width: 100%;
+    object-fit: cover;
+    border-radius: 6px;
+}
+.slider-banner img:nth-child(2){
+    display: none;
 }
 
 .slider-item {
@@ -723,6 +744,7 @@ body {
     justify-content: center;
     align-items: center;
     flex-shrink: 0;
+    display: none;
 }
 
 .slider-item img {
@@ -730,7 +752,6 @@ body {
     height: 100%;
     object-fit: cover;
     border-radius: 8px;
-    /* border: 1px solid rgba(0, 0, 0, 0.03); */
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
@@ -1658,7 +1679,18 @@ body {
         display: flex;
         justify-content: space-between;
     }
-
+    .home, .account{
+        margin: 0;
+    }
+    .cart-button{
+        margin: 0 10px 0 0;
+    }
+    .account{
+        width: unset;
+        flex: 1;
+        justify-content: flex-start;
+        white-space: nowrap
+    }
     .header-top{
         display: flex;
         flex-direction: column-reverse;
