--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1355,6 +1355,11 @@ body {
     text-align: center;
     padding: 0 8px;
     padding-bottom: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 32px;
 }
 .container__service__first{
     height: fit-content;
@@ -1936,11 +1941,13 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 50px 0;
 }
 .container-third-wrapper{
     height: fit-content;
     width: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
@@ -1966,6 +1973,7 @@ body {
     font-style: italic;
     font-weight: 600;
     color: #000;
+    text-transform: uppercase;
 }
 .third-content{
     height: 100%;
@@ -1990,7 +1998,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 32px;
+    padding: 3%;
 }
 .third-style-right img:nth-child(1){
     display: none;
