--- a/public/navigation_css/wheyshop_checkout.css
+++ b/public/navigation_css/wheyshop_checkout.css
@@ -26,13 +26,15 @@ body{
     gap: 20px;
 }
 .container-wrapper{
+    position: relative;
     margin: 0 auto;
     height: 100%;
-    width: fit-content;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 20px;
+    padding: 16px;
     /* overflow-x: auto; */
 }
 
@@ -114,7 +116,7 @@ body{
     height: 40px;
     width: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
     gap: 10px;
 }
@@ -125,6 +127,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    display: none;
 }
 
 .header-search-wrapper{
@@ -276,6 +279,7 @@ body{
     justify-content: space-between;
     align-items: center;
     padding-top: 5px;
+    display: none;
 }
 
 .viral-search{
@@ -354,9 +358,13 @@ body{
 
 
 .order-succesful{
-    position: absolute;
-    width: 1280px;
-    height: 800px;
+    left: 0px;
+    right: 0px;
+    top: 0;
+    bottom: 0;
+    /* position: relative; */
+    /* width: 100%; */
+    /* height: 800px; */
     background-color: #fff;
     display: none;
     flex-direction: column;
@@ -365,6 +373,7 @@ body{
     z-index: 1;
     border-radius: 50px;
     overflow: hidden;
+    padding: 32px;
 }
 .order-succesful img{
     height: 600px;
@@ -374,6 +383,7 @@ body{
     font-size: 22px;
     font-weight: 600;
     z-index: 1;
+    text-align: center;
 }
 .order-succesful button{
     padding: 10px 20px;
@@ -846,4 +856,158 @@ label button:hover .more-information{
 }
 .button-payment button:hover{
     box-shadow: 0 0 15px #2195f380
+}
+
+@media only screen and (max-width: 1024px) {
+    .header-wrapper {
+        margin: unset;
+        max-width: 100%;
+        width: 100%;
+        padding: 0 16px;
+        gap: 10px;
+    }
+
+    /* .header-logo {
+        height: 21px;
+        flex-direction: row;
+        gap: 10px;
+    }
+
+    .logo-img {
+        height: 100%;
+    }
+
+    .logo-img img {
+        height: 100%;
+    } */
+
+    .header-content {
+        margin: 0;
+        width: 100%;
+    }
+
+    .search-button {
+        display: none;
+    }
+
+    .address.two {
+        height: fit-content;
+        width: 100%;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        background-color: #fff;
+        margin: 0;
+        padding: 16px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+        border-radius: 10px;
+    }
+
+    .address-two-wrapper {
+        height: 100%;
+        width: fit-content;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+    }
+
+    .header-bot
+    {
+        display: none;
+    }
+    .home, .account{
+        margin: 0;
+    }
+    .cart-button{
+        margin: 0 10px 0 0;
+    }
+    .account{
+        width: unset;
+        flex: 1;
+        justify-content: flex-start;
+        white-space: nowrap
+    }
+    .main-content {
+        padding: 0 10px;
+    }
+
+    .main-content-wrapper {
+        width: 100%;
+    }
+
+    .list-item {
+        flex-wrap: wrap;
+        gap: 15px;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    
+    .header-wrapper{
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .header-logo {
+        height: 21px;
+        flex-direction: row;
+        gap: 10px;
+    }
+
+    .logo-img {
+        height: 100%;
+    }
+
+    .logo-img img {
+        height: 100%;
+    }
+    .header-top{
+        justify-content: flex-start;
+    }
+
+    .main-product-wrapper {
+        flex-direction: column;
+    }
+
+    .colum-one,
+    .colum-two {
+        width: 100%;
+    }
+
+    .path-bar-wrapper a {
+        font-size: 12px;
+    }
+
+    .path-bar-wrapper i {
+        font-size: 10px;
+    }
+    .cart-show{
+        position: fixed;
+        left: 10px;
+        right: 10px;
+        width: auto;
+    }
+    .checkout-wrapper{
+        flex-direction: column;
+    }
+    .colum-cart{
+        width: 100%;
+        padding: 16px;
+    }
+    .colum-cart-wrapper{
+        padding: 16px;
+    }
+    .colum-payment{
+        width: 100%;
+        padding: 16px;
+    }
+    .list-items,
+    .total{
+        padding: 0;
+    }
+}
+
+@media only screen and (max-width: 360px) {
+    .product-name span {
+        font-size: 12px;
+    }
 }
