--- a/public/navigation_css/wheyshop_tracking.css
+++ b/public/navigation_css/wheyshop_tracking.css
@@ -122,7 +122,7 @@ body {
     height: 40px;
     width: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
     gap: 10px;
 }
@@ -133,6 +133,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    display: none;
 }
 
 .header-search-wrapper {
@@ -548,6 +549,7 @@ body {
     justify-content: space-between;
     align-items: center;
     padding-top: 5px;
+    display: none;
 }
 
 .viral-search {
@@ -656,6 +658,7 @@ body {
     width: 100%;
     height: 100%;
     padding: 0 10px;
+    position: relative;
 }
 
 .tracking-wrapper {
@@ -667,7 +670,8 @@ body {
     align-items: center;
     gap: 16px;
 }
-.tab-status{
+
+.tab-status {
     height: 100%;
     width: 400px;
     background-color: #fff;
@@ -678,10 +682,12 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
     transition: all .3s;
 }
-.tab-status:hover{
+
+.tab-status:hover {
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
 }
-.tab-status-wrapper{
+
+.tab-status-wrapper {
     position: relative;
     padding: 30px;
     height: 100%;
@@ -692,8 +698,9 @@ body {
     align-items: flex-start;
     gap: 10px;
 }
+
 .close,
-.open{
+.open {
     position: absolute;
     top: 20px;
     right: 20px;
@@ -708,16 +715,19 @@ body {
     cursor: pointer;
     color: #2196F3;
 }
+
 .close:hover,
-.open:hover{
+.open:hover {
     background-color: #eee;
 }
-.tab-account{
+
+.tab-account {
     height: 80px;
     width: 100%;
     overflow: hidden;
 }
-.user-account{
+
+.user-account {
     height: 100%;
     width: 100%;
     padding: 10px;
@@ -728,10 +738,11 @@ body {
     gap: 10px;
     cursor: pointer;
 }
+
 /* .user-account:hover{
     background-color: #f5f5f5;
 } */
-.user-account-img{
+.user-account-img {
     height: 100%;
     width: fit-content;
     padding: 0px;
@@ -740,7 +751,8 @@ body {
     align-items: center;
     flex-shrink: 0;
 }
-.user-account-img img{
+
+.user-account-img img {
     height: 100%;
     max-width: 100%;
     object-fit: cover;
@@ -748,7 +760,8 @@ body {
     padding: 2px;
     border: 2px solid #2196F3;
 }
-.user-account-information{
+
+.user-account-information {
     height: 100%;
     width: 100%;
     display: flex;
@@ -757,7 +770,8 @@ body {
     align-items: flex-start;
     gap: 5px;
 }
-.user-account-name{
+
+.user-account-name {
     height: fit-content;
     width: max-content;
     display: flex;
@@ -765,7 +779,8 @@ body {
     align-items: center;
     font-weight: 600;
 }
-.user-account-edit{
+
+.user-account-edit {
     height: fit-content;
     width: fit-content;
     display: flex;
@@ -775,13 +790,16 @@ body {
     color: #999;
     cursor: pointer;
 }
-.user-account-edit:hover{
+
+.user-account-edit:hover {
     color: #2196F3;
 }
-.user-account-edit i{
+
+.user-account-edit i {
     font-size: 14px;
 }
-.user-account-edit span{
+
+.user-account-edit span {
     line-height: 16px;
     font-size: 14px;
     overflow: hidden;
@@ -792,14 +810,15 @@ body {
 }
 
 
-.tab-button{
+.tab-button {
     min-height: 60px;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.tab-button button{
+
+.tab-button button {
     width: 100%;
     height: 100%;
     background-color: transparent;
@@ -815,16 +834,20 @@ body {
     transition: all .2s;
     text-align: start;
 }
-.tab-button button.active{
+
+.tab-button button.active {
     background-color: #2196F31a !important;
 }
-.tab-button button:hover{
+
+.tab-button button:hover {
     background-color: #f5f5f5;
 }
-.tab-button button img{
+
+.tab-button button img {
     height: 30px;
 }
-.tab-button button .text{
+
+.tab-button button .text {
     font-weight: 600;
     overflow: hidden;
     display: -webkit-box;
@@ -832,14 +855,16 @@ body {
     -webkit-box-orient: vertical;
     text-overflow: ellipsis;
 }
-.tab{
+
+.tab {
     min-height: 60px;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.tab button{
+
+.tab button {
     width: 100%;
     height: 100%;
     background-color: transparent;
@@ -855,16 +880,20 @@ body {
     transition: all .2s;
     text-align: start;
 }
-.tab button.active{
+
+.tab button.active {
     background-color: #2196F311 !important;
 }
-.tab button:hover{
+
+.tab button:hover {
     background-color: #f5f5f5;
 }
-.tab button img{
+
+.tab button img {
     height: 30px;
 }
-.tab button .text{
+
+.tab button .text {
     font-weight: 600;
     overflow: hidden;
     display: -webkit-box;
@@ -874,7 +903,7 @@ body {
 }
 
 
-.tab-content{
+.tab-content {
     height: 100%;
     width: 100%;
     background-color: #fff;
@@ -886,10 +915,12 @@ body {
     transition: all .3s;
     overflow: hidden;
 }
-.tab-content:hover{
+
+.tab-content:hover {
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
 }
-.tab-content-wrapper{
+
+.tab-content-wrapper {
     position: relative;
     padding: 30px;
     height: 100%;
@@ -902,10 +933,11 @@ body {
 
 
 
-.order-details.active{
+.order-details.active {
     display: flex;
 }
-.order-details{
+
+.order-details {
     background-color: #fff;
     position: absolute;
     top: 0;
@@ -923,7 +955,7 @@ body {
     z-index: 1;
 }
 
-.title-order-details{
+.title-order-details {
     height: fit-content;
     flex: 1;
     display: flex;
@@ -934,10 +966,12 @@ body {
     font-size: 18px;
 
 }
-.title-order-details span{
+
+.title-order-details span {
     color: #0076d7;
 }
-.close-details{
+
+.close-details {
     height: 30px;
     width: 30px;
     display: flex;
@@ -950,11 +984,11 @@ body {
     cursor: pointer;
 }
 
-.close-details:hover{
+.close-details:hover {
     background-color: rgb(0, 160, 255, 0.1);
 }
 
-.transportation-process{
+.transportation-process {
     height: 60px;
     width: 100%;
     flex-shrink: 0;
@@ -963,7 +997,7 @@ body {
     align-items: center;
 }
 
-.transportation-process-wrapper{
+.transportation-process-wrapper {
     width: 100%;
     height: 100%;
     background-color: #fff;
@@ -973,7 +1007,7 @@ body {
 }
 
 
-.box-transport{
+.box-transport {
     width: 100%;
     height: 100%;
     display: flex;
@@ -981,18 +1015,21 @@ body {
     align-items: center;
     gap: 10px;
 }
-.box-transport .wrapper-circle{
+
+.box-transport .wrapper-circle {
     border-color: #555;
 }
-.box-transport .circle{
+
+.box-transport .circle {
     background-color: #555;
 }
-.box-transport .line{
+
+.box-transport .line {
     background-color: #555;
 }
 
 
-.wrapper-circle{
+.wrapper-circle {
     flex-shrink: 0;
     height: 30px;
     width: 30px;
@@ -1002,7 +1039,8 @@ body {
     border: 2px solid #2196F3;
     border-radius: 50%;
 }
-.circle{
+
+.circle {
     height: 20px;
     width: 20px;
     background-color: #2196F3;
@@ -1012,7 +1050,8 @@ body {
     align-items: center;
     color: #fff;
 }
-.circle i{
+
+.circle i {
     height: 14px;
     width: 14px;
     font-size: 12px;
@@ -1021,7 +1060,7 @@ body {
     align-items: center;
 }
 
-.wrapper-line{
+.wrapper-line {
     content: '';
     width: 100%;
     height: 100%;
@@ -1029,7 +1068,8 @@ body {
     justify-content: center;
     align-items: center;
 }
-.line{
+
+.line {
     background-color: #2196F3;
     height: 4px;
     width: 100%;
@@ -1043,7 +1083,7 @@ body {
 
 
 
-.product{
+.product {
     height: 125px;
     width: 100%;
     display: flex;
@@ -1055,10 +1095,12 @@ body {
     overflow: hidden;
     cursor: pointer;
 }
-.product:hover{
+
+.product:hover {
     background-color: #2196F311;
 }
-.product-wrapper{
+
+.product-wrapper {
     height: 100%;
     width: 100%;
     display: flex;
@@ -1067,24 +1109,28 @@ body {
     padding: 10px 12px 10px 0;
     gap: 10px;
 }
-.product-img{
+
+.product-img {
     height: 125px;
     width: fit-content;
     flex-shrink: 0;
 }
-.product-img img{
+
+.product-img img {
     height: 100%;
     max-width: 100%;
     object-fit: cover;
 }
-.product-information{
+
+.product-information {
     height: 100%;
     width: 100%;
     display: flex;
     justify-content: flex-start;
     align-items: center;
 }
-.information-group{
+
+.information-group {
     height: 100%;
     width: fit-content;
     display: flex;
@@ -1093,7 +1139,8 @@ body {
     align-items: flex-start;
     gap: 5px;
 }
-.product-name{
+
+.product-name {
     /* font-weight: 600; */
     line-height: unset;
     overflow: hidden;
@@ -1102,7 +1149,8 @@ body {
     -webkit-box-orient: vertical;
     text-overflow: ellipsis;
 }
-.product-quantity{
+
+.product-quantity {
     font-size: 14px;
     color: #888;
     height: fit-content;
@@ -1112,10 +1160,12 @@ body {
     align-items: center;
     gap: 5px;
 }
-.product-quantity span{
+
+.product-quantity span {
     font-size: 14px;
 }
-.product-price{
+
+.product-price {
     height: 100%;
     flex: 1;
     display: flex;
@@ -1126,16 +1176,17 @@ body {
 }
 
 
-.total.details{
+.total.details {
     border: unset;
     height: 50px;
     flex-shrink: 0;
 }
 
-.content.active{
+.content.active {
     display: flex;
 }
-.content{
+
+.content {
     width: 100%;
     height: 100%;
     display: none;
@@ -1144,7 +1195,8 @@ body {
     align-items: flex-start;
     gap: 10px;
 }
-.title{
+
+.title {
     height: 50px;
     width: 100%;
     display: flex;
@@ -1156,20 +1208,22 @@ body {
     flex-shrink: 0;
 }
 
-.open{
+.open {
     position: unset;
 }
 
-.list-order{
+.list-order {
     height: 100%;
     width: 100%;
     border-radius: 15px;
     overflow-y: scroll;
 }
-.list-order::-webkit-scrollbar{
+
+.list-order::-webkit-scrollbar {
     display: none;
 }
-.list-order-wrapper{
+
+.list-order-wrapper {
     width: 100%;
     height: fit-content;
     /* background-color: #ddd; */
@@ -1181,7 +1235,7 @@ body {
 }
 
 
-.order{
+.order {
     height: 160px;
     width: 100%;
     background-color: #f9f9f950;
@@ -1189,10 +1243,12 @@ body {
     border-radius: 15px;
     cursor: pointer;
 }
-.order:hover{
+
+.order:hover {
     background-color: #2196F311;
 }
-.order-wrapper{
+
+.order-wrapper {
     height: 100%;
     width: 100%;
     padding: 10px 12px 10px 10px;
@@ -1202,14 +1258,16 @@ body {
     align-items: flex-start;
     /* gap: 10px; */
 }
-.header-order{
+
+.header-order {
     height: fit-content;
     width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.status-order{
+
+.status-order {
     height: 100%;
     width: max-content;
     display: flex;
@@ -1220,10 +1278,12 @@ body {
     font-size: 14px;
     cursor: pointer;
 }
-.status-order:hover{
+
+.status-order:hover {
     color: #0076d7;
 }
-.first-product{
+
+.first-product {
     height: 70px;
     width: 100%;
     display: flex;
@@ -1232,7 +1292,8 @@ body {
     gap: 10px;
     /* background-color: green; */
 }
-.first-product-img{
+
+.first-product-img {
     height: 100%;
     width: fit-content;
     display: flex;
@@ -1240,17 +1301,20 @@ body {
     align-items: center;
     border: 1px solid #0076d71a;
 }
-.first-product-img img{
+
+.first-product-img img {
     height: 100%;
 }
-.first-product-information{
+
+.first-product-information {
     height: 100%;
     width: 100%;
     display: flex;
     justify-content: flex-start;
     align-items: center;
 }
-.information-group{
+
+.information-group {
     height: 100%;
     width: fit-content;
     display: flex;
@@ -1259,7 +1323,8 @@ body {
     align-items: flex-start;
     gap: 5px;
 }
-.first-product-name{
+
+.first-product-name {
     /* font-weight: 600; */
     line-height: unset;
     overflow: hidden;
@@ -1268,7 +1333,8 @@ body {
     -webkit-box-orient: vertical;
     text-overflow: ellipsis;
 }
-.first-product-quantity{
+
+.first-product-quantity {
     font-size: 14px;
     color: #888;
     height: fit-content;
@@ -1278,10 +1344,12 @@ body {
     align-items: center;
     gap: 5px;
 }
-.first-product-quantity span{
+
+.first-product-quantity span {
     font-size: 14px;
 }
-.first-product-price{
+
+.first-product-price {
     height: 100%;
     flex: 1;
     display: flex;
@@ -1293,17 +1361,17 @@ body {
 }
 
 
-.total{
+.total {
     height: 32px;
     width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
     border-top: 1px solid #2196F31a;
-    
+
 }
 
-.total-products{
+.total-products {
     height: 100%;
     width: max-content;
     display: flex;
@@ -1314,13 +1382,16 @@ body {
     color: #999;
     font-size: 14px;
 }
-.total-products:hover{
+
+.total-products:hover {
     color: #0076d7;
 }
-.total-products span{
+
+.total-products span {
     font-size: 14px;
 }
-.total-price{
+
+.total-price {
     height: 100%;
     width: max-content;
     display: flex;
@@ -1329,14 +1400,16 @@ body {
     flex-shrink: 0;
     gap: 5px;
 }
-.total-price div{
+
+.total-price div {
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: flex-end;
     font-weight: 600;
 }
-.total img{
+
+.total img {
     height: 20px;
 }
 
@@ -1350,6 +1423,7 @@ body {
     align-items: center;
     gap: 10px;
 }
+
 .brand-offical-logo {
     display: flex;
     justify-content: center;
@@ -1359,9 +1433,11 @@ body {
     padding: 2px 6px 2px 4px;
     border-radius: 50em;
 }
+
 .check-icon {
     height: 14px;
 }
+
 .brand-offical-logo span {
     height: 16px;
     font-size: 11px;
@@ -1371,7 +1447,8 @@ body {
     justify-content: center;
     align-items: center;
 }
-.brand-name{
+
+.brand-name {
     font-weight: 600;
 }
 
@@ -1382,13 +1459,11 @@ body {
         margin: unset;
         max-width: 100%;
         width: 100%;
-        flex-direction: column;
-        align-items: flex-start;
         padding: 0 16px;
         gap: 10px;
     }
 
-    .header-logo {
+    /* .header-logo {
         height: 21px;
         flex-direction: row;
         gap: 10px;
@@ -1400,7 +1475,7 @@ body {
 
     .logo-img img {
         height: 100%;
-    }
+    } */
 
     .header-content {
         margin: 0;
@@ -1432,24 +1507,24 @@ body {
         align-items: center;
     }
 
-    .header-bot
-    {
+    .header-bot {
         display: none;
     }
 
-    .header-options{
-        width: 100%;
-        display: flex;
-        justify-content: space-between;
+    .home,
+    .account {
+        margin: 0;
     }
 
-    .header-top{
-        display: flex;
-        flex-direction: column-reverse;
-        height: fit-content;
+    .cart-button {
+        margin: 0 10px 0 0;
     }
-    .header{
-        height: fit-content;
+
+    .account {
+        width: unset;
+        flex: 1;
+        justify-content: flex-start;
+        white-space: nowrap
     }
 
     .main-content {
@@ -1464,69 +1539,32 @@ body {
         flex-wrap: wrap;
         gap: 15px;
     }
-
-    .item {
-        width: calc((100% / 3) - 15px);
-        height: 505px;
-    }
 }
 
 @media only screen and (max-width: 768px) {
-    .slider-item {
-        width: 100%;
+
+    .header-wrapper {
+        flex-direction: column;
+        align-items: flex-start;
     }
 
-    .slider-item:last-child {
-        display: none;
+    .header-logo {
+        height: 21px;
+        flex-direction: row;
+        gap: 10px;
     }
 
-    .address-wrapper {
-        width: 100%;
-        overflow: hidden;
-        display: -webkit-box;
-        -webkit-line-clamp: 1;
-        -webkit-box-orient: vertical;
-        text-overflow: ellipsis;
+    .logo-img {
+        height: 100%;
     }
 
-    .list-products {
-        height: fit-content;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        gap: 16px;
+    .logo-img img {
+        height: 100%;
     }
 
-    .product {
-        height: 150px;
-        width: calc((100% / 2) - 8px);
+    .header-top {
+        justify-content: flex-start;
     }
-
-    .product-title {
-        padding: 16px 16px 0 16px;
-    }
-
-    .product-name span {
-        font-size: 16px;
-    }
-
-    .list-item {
-        flex-wrap: wrap;
-        gap: 16px;
-    }
-
-    .item {
-        width: calc((100% / 2) - 8px);
-        height: 487px;
-    }
-
-    .item-information-wrapper {
-        gap: 12px;
-    }
-
-    .brand-ship {
-        padding: 0 10px 5px 10px;
-    }
-
 
     .main-product-wrapper {
         flex-direction: column;
@@ -1543,6 +1581,63 @@ body {
 
     .path-bar-wrapper i {
         font-size: 10px;
+    }
+
+    .cart-show {
+        position: fixed;
+        left: 10px;
+        right: 10px;
+        width: auto;
+    }
+
+    .checkout-wrapper {
+        flex-direction: column;
+    }
+
+    .colum-cart {
+        width: 100%;
+        padding: 16px;
+    }
+
+    .colum-cart-wrapper {
+        padding: 16px;
+    }
+
+    .colum-payment {
+        width: 100%;
+        padding: 16px;
+    }
+
+    .list-items,
+    .total {
+        padding: 0;
+    }
+
+    .close,
+    .open {
+        display: flex;
+    }
+    .tab-status{
+        position: absolute;
+        z-index: 101;
+        left: 10px;
+        max-width: 340px;
+        width: 100%;
+        box-shadow: unset;
+        background-color: unset;
+    }
+    .tab-status:hover{
+        box-shadow: unset;
+    }
+    .tab-status-wrapper{
+        margin-right: 20px;
+        background-color: #fff;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        border-radius: 30px;
+        overflow: hidden;
+    }
+    .shadow{
+        display: flex;
     }
 }
 
